backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-deployment
  template:
    metadata:
      labels:
        app: backend-deployment
    spec:
      containers:
        - name: backend-container
          image: ghcr.io/djarnis2/simple-fortune-cookie-group18-backend:V2
          ports:
            - name: http
              containerPort: 9000
