backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-deployment
  name: backend-deployment
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: http
  selector:
    app: backend-deployment
  type: ClusterIP
