frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-deployment
  name: frontend-deployment
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: frontend-deployment
  type: NodePort
